# llm-from-scratch

./: .gitignore  pyproject.toml
src/: neoron.ipynb
